--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
 		  the piece.
 		</main>
 		<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [Carly Nylander]</p>
 		</footer>
 	</content>
 </body>	
