--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,10 @@
 		  his own story to relate back to his purpose of how suicide is never the answer. He finished by using words to 
 		  explain that all types of love are beautiful and other people shouldn't dictate personal happiness. This structure
 		  can help me with my Lived Experiences project because it shows how to tie personal experiences to the purpose of
-		  the piece.
+		  the piece.<p></p> One of the different types of groups targeted by the video are the online gamers who spend too much of 
+		  their time in the virtual world and don't focus on the real world. Another type are the people who created the online 
+		  games and how they do not necessarily have the same interests and agendas as the people who play the games. The last
+		  mentioned are the people who do not care for or understand the gaming world.
 		</main>
 		<footer>
 		<p>&copy; 2013 [Carly Nylander]</p>
