--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,9 @@
 		  the piece.<p></p> One of the different types of groups targeted by the video are the online gamers who spend too much of 
 		  their time in the virtual world and don't focus on the real world. Another type are the people who created the online 
 		  games and how they do not necessarily have the same interests and agendas as the people who play the games. The last
-		  mentioned are the people who do not care for or understand the gaming world.
+		  mentioned are the people who do not care for or understand the gaming world. The social issues covered by this video
+		  are how many people spend so much time online in a game that they don't care about things in their real life anymore
+		  and how all of the 
 		</main>
 		<footer>
 		<p>&copy; 2013 [Carly Nylander]</p>
