--- a/lived.html
+++ b/lived.html
@@ -21,9 +21,33 @@
 	</header>
 	<main>
 		<h1>lived experiences project title</h1>
-		<p>content goes here</p>
+		<p>
+Technology has influenced my choice of a major because it has allowed me to explore other cultures without being in direct contact with them. Through the use of computers and the internet, I was able to learn about the French culture which eventually led me to become a French major. It also helps me continue to succeed throughout my college career.
+
+A french major requires various types of skills. It not only requires the ability to produce words in french, but to be able to listen to the language and be able to internalize it and understand the meaning so that one can respond in the form of spoken words or writing. However to major in french it goes beyond simple back and forth talking, it requires understanding to have deep and meaningful communication.  A commonly overlooked skill to perceive any language is the accent, which can inhibit effective communication by a simple mispronunciation. A different area required for a french major is the capability to understand the culture and how to their own history has shaped the way they run their society today. It also is difficult for some people to accept and respect others views and way of life.
+
+When I was little, I overheard my cousin Courtney speaking French and the fluent and delicate language instantly attracted me. I was so intrigued that later I went on the computer to learn more about the french people and language to better understand their way of life. The results brought up many people and activities that interested me, and there started a lifelong enthusiasm for the French culture. In high school, I enrolled in my first French class and learned that it was much harder than it appeared  to speak even basic sentences in a completely different language.
+
+Throughout high school I struggled with the homework and the many steps required for communication in french. First I must be able to hear or see the words written in french, then quickly and efficiently translate from french to english in my head then think of a response in english, translate that into french and then finally be able to speak the french aloud. I also realized that it is much harder to decipher french when speaking then viewing it written on a piece of paper. With all of conflicts I encountered, it made me doubt whether or not French was actually my true passion and if I wanted to continue with my studies. I tried several methods to help improve my accent and to expand my vocabulary but after a while, my resolve was failing.
+
+Eventually my teachers realized that I required other methods to learn or I was going to fall behind.  They introduced me to other resources I could use such as the computer and the internet. They showed me how I could use the website that went with the textbook. It helped me with my homework because I could listen to someone speaking with a french accent outside class and could use my time at home to learn auditorily. The computers also helped me connect to my teachers when I wasn’t in class with any questions I might have had. Slowly with the help of the many online resources that accompanied our textbooks and my teachers encouragement, I began to regain my interest in French.
+
+The computer helped me in many other ways as well. It helped me monitor my grades to make sure that I was on track. Programs such as powerpoint also helped with me with presentations and projects which are very important in a society that is becoming more dependent on electronic and digital devices. It is necessary to be able to understand how to use computers and other electronical devices as they are becoming much more used and involved with future careers. The internet helped me connect with a pen pal which was a very helpful contact with other questions my teacher could not answer.
+
+After a few years studying french, I had the opportunity to travel over to Europe. We got to visit France and it was the first time I got to interact in person with a french citizen. It was an extraordinary experience that allowed me get to interact with actual french people in their culture. It was a mind opening experience to travel to a place where they expected me to speak their language and with my limited knowledge at the time, it was very difficult. However this time the difficulty instead of impeding my desires to study french in college, motivated me to continue my studies. This is because it is very humbling to see how people so different from myself are still human and we can relate in other ways. Using my language in a real life setting made me was the first time that it made me feel like all my studying and struggling hadn’t all been in vain. It also made me aware of all the hard work I still had to do if I wanted to be successful in my endeavors. 
+
+I learned many other things while I was in France. I discovered many stereotypes are not true such as French people always being rude or sitting around wearing stripes smoking a long cigarette all day. It was very exciting to be able to experience what I had been learning about for years but never fully understood until I got to travel to Europe. While over there, I got to meet my French pen pal which was surreal after talking to someone for years over a computer who I would have never met if it hadn’t been for the internet. After returning from France, I realized it had started to renew my belief that studying French was what I wanted to spend my life studying and what I should be focusing on in college. 
+
+While in college, the help of the internet is still helping me to accomplish my plans to earn a degree. A website that corresponds my college textbook has proven to be yet again a priceless resource for me. It can help me make study plans specific to the areas I am struggling in and is always accessible for any late night or last minute questions. It is also a great way to be able to hear someone with a real French accent, which I still struggle. It helped me also realize I am not the only one that struggles to understand through an accent. Before studying a different language, I did not think that an accent could prove as much of a barrier as it does in basic understanding. 
+
+These types of resources have ensured that I can be successful with my schooling and one day my career. Without the internet, not only could I not have maintained my determination and ability to be successful with my major, but I would have never have been able to discover or appreciate the culture of the French in the first place. Therefore, technology such as computers and the internet have impacted my decision on what to major in a positive way and helped me accomplish things I would not have thought possible without them.
+
+
+
+
+</p>
 		<p>paragraph 2</p>
 	</main>
 	<footer>
-		<p>&copy; 2013 [Name goes here]</p>
+		<p>&copy; 2013 [Carly Nylander]</p>
 	</footer>
