--- a/lived.html
+++ b/lived.html
@@ -20,7 +20,7 @@
 		</ul>
 	</header>
 	<main>
-		<h1>lived experiences project title</h1>
+		<h1>Lived Experiences</h1>
 		<p>
 Technology has influenced my choice of a major because it has allowed me to explore other cultures without being in direct contact with them. Through the use of computers and the internet, I was able to learn about the French culture which eventually led me to become a French major. It also helps me continue to succeed throughout my college career.
 
