--- a/blog.html
+++ b/blog.html
@@ -45,6 +45,8 @@
 		  are how many people spend so much time online in a game that they don't care about things in their real life anymore
 		  and how all of the 
 		</main>
+			<h1>blog</h1>
+			<p> 	People who made the game don't acually care about that game, they just want people's money.
 		<footer>
 		<p>&copy; 2013 [Carly Nylander]</p>
 		</footer>
